Add react-youtube package; Embed video of launch if it is available

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,9 @@
 .failure .timeline-icon {
   background-color: #ea4335;
 }
+
+.timeline-summary iframe {
+  display: block;
+  width: 100%;
+  margin: 20px 0;
+}
