Create Launch and Comments components; Add buttons on launch cards for displaying/hiding comment and videos

--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,8 @@
 .timeline-summary iframe {
   display: block;
   width: 100%;
+}
+
+.timeline-summary > *:not(:last-child) {
   margin: 20px 0;
 }
